fix: trophy icon spacing

--- a/src/public/templates/menu/trophies-tab/trophy/trophy.styles.scss
+++ b/src/public/templates/menu/trophies-tab/trophy/trophy.styles.scss
@@ -13,7 +13,7 @@
   }
 
   &__icon {
-    padding: 1rem;
+    padding: 1.25rem;
     opacity: 0.25;
     position: relative;
     width: 6.5rem;
